# esp32ui

./: L_Core.sln  L_Core.vgdbproj  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  RevisionHistory.h  lv_conf.h  main.c  main.h
main/K_Core/: DisplayList.c  DisplayList.h  GPIO.c  GPIO.h  K_Core.c  K_Core.h  taskmanager.c  taskmanager.h
main/devices/: conf_WT32SCO1-Plus.h  display.c  display.h
main/open62541/: opc.c  opc.h
main/ui/: ui.c  ui.h
main/ui/images/: hyrel-mark.c  hyrel_mark.c  hyrel_mark.h  img-splash.c  img_splash.h
main/wifi/: wifi.c  wifi.h
